[gd_scene load_steps=31 format=2]

[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultBoldFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://dialogic/Menus/BackgroundImage.jpg" type="Texture" id=2]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dialogic/Menus/Menu_BackgroundMusic_Next to You.ogg" type="AudioStream" id=4]
[ext_resource path="res://dialogic/Menus/DialogicMenus_SubMenus.gd" type="Script" id=5]
[ext_resource path="res://dialogic/Menus/DialogicMenus_Warning.gd" type="Script" id=6]
[ext_resource path="res://dialogic/Menus/DialogicMenus_SettingsMenu.gd" type="Script" id=7]
[ext_resource path="res://dialogic/Menus/DialogicMenus_MainMenu.gd" type="Script" id=8]
[ext_resource path="res://dialogic/Menus/DialogicMenus_AboutMenu.gd" type="Script" id=9]
[ext_resource path="res://dialogic/Menus/DialogicMenus_SaveMenu.gd" type="Script" id=10]
[ext_resource path="res://dialogic/Menus/DialogicMenus.gd" type="Script" id=11]
[ext_resource path="res://dialogic/Menus/DialogicMenus_LoadMenu.gd" type="Script" id=12]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/Overlock/Overlock-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://addons/dialogic/Example Assets/Fonts/DefaultItalicFont.tres" type="DynamicFont" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.392157, 0.407843, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.0313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_width_bottom = 3
border_color = Color( 0.533333, 0.160784, 0.14902, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.643137, 0.72549, 0.756863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.0705882 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.505882, 0.584314, 0.615686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.0313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.737255, 0.670588, 0.415686, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 1, 1, 1, 0.0313726 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.513726, 0.2, 0.2, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=7]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="Theme" id=8]
default_font = ExtResource( 1 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 0.517647, 0.498039, 0.498039, 0.533333 )
Button/colors/font_color_hover = Color( 0.968627, 0.482353, 0.415686, 1 )
Button/colors/font_color_pressed = Color( 0.909804, 0.368627, 0.368627, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource( 6 )
HSlider/styles/grabber_area_highlight = null
HSlider/styles/slider = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="Theme" id=10]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 9 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.282353 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=13]
thickness = 3

[sub_resource type="Animation" id=14]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "reset"
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.25098, 0.0862745, 0.0862745, 0.972549 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="DialogicVisualNovelManager" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" type="Control" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuContainer" type="Control" parent="Menus"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 8 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
Game = NodePath("../../Game")

[node name="InGameMenu" type="HBoxContainer" parent="Menus/MenuContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.2996
margin_bottom = 0.700439
theme = SubResource( 10 )
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
margin_left = 421.0
margin_right = 458.0
margin_bottom = 32.0
text = "Save"
flat = true

[node name="Load_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
margin_left = 478.0
margin_right = 517.0
margin_bottom = 32.0
text = "Load"
flat = true

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/InGameMenu"]
margin_left = 537.0
margin_right = 602.0
margin_bottom = 32.0
text = "Settings"
flat = true

[node name="SubMenus" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="Menus/MenuContainer/SubMenus"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.223529, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="Menus/MenuContainer/SubMenus"]
modulate = Color( 0.658824, 0.639216, 0.901961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContent" type="Panel" parent="Menus/MenuContainer/SubMenus"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 305.0
margin_top = 35.0
margin_right = -45.0
margin_bottom = -42.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SaveMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_right = -26.0
margin_bottom = -2.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSlots" type="GridContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SaveMenu/Scroll"]
margin_right = 605.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/LoadMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_right = -23.0
margin_bottom = -41.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveSlots" type="GridContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/LoadMenu/Scroll"]
margin_right = 611.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/LoadMenu"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.0
text = "Right-click saves to delete them."
align = 1
valign = 1

[node name="SettingsMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]
margin_right = 306.0
margin_bottom = 505.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox"]
margin_right = 306.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display"]
margin_right = 306.0
margin_bottom = 37.0
text = "Display"

[node name="DisplaySelect" type="OptionButton" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display"]
margin_top = 41.0
margin_right = 306.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 14 )
text = "Window"
flat = true
items = [ "Window", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="OverallVolume" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox"]
margin_top = 82.0
margin_right = 306.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume"]
margin_right = 306.0
margin_bottom = 37.0
text = "Volume"

[node name="Slider" type="HSlider" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume"]
margin_top = 41.0
margin_right = 306.0
margin_bottom = 57.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="VSeparator" type="VSeparator" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]
margin_left = 326.0
margin_right = 330.0
margin_bottom = 505.0

[node name="VBox2" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox"]
margin_left = 350.0
margin_right = 656.0
margin_bottom = 505.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutMenu" type="Control" parent="Menus/MenuContainer/SubMenus/MenuContent"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 9.0
margin_right = -9.0
margin_bottom = -9.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus/MenuContent/AboutMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menus/MenuContainer/SubMenus/MenuContent/AboutMenu/VBox"]
margin_top = 214.0
margin_right = 656.0
margin_bottom = 291.0
text = "This game was created to showcase the new dialogic saving system."
align = 1
autowrap = true

[node name="Buttons" type="VBoxContainer" parent="Menus/MenuContainer/SubMenus"]
margin_left = 53.4915
margin_top = 102.0
margin_right = 273.492
margin_bottom = 505.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_right = 220.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 12 )
text = "Load menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 66.0
margin_right = 220.0
margin_bottom = 103.0
text = "Main Menu"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 107.0
margin_right = 220.0
margin_bottom = 144.0
text = "Save Game"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMenu_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 148.0
margin_right = 220.0
margin_bottom = 185.0
text = "Load Game"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 189.0
margin_right = 220.0
margin_bottom = 226.0
text = "Settings"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 230.0
margin_right = 220.0
margin_bottom = 267.0
text = "About"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 271.0
margin_right = 220.0
margin_bottom = 308.0
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 312.0
margin_right = 220.0
margin_bottom = 362.0
custom_styles/separator = SubResource( 13 )
custom_constants/separation = 50

[node name="ResumeGame_Button" type="Button" parent="Menus/MenuContainer/SubMenus/Buttons"]
margin_top = 366.0
margin_right = 220.0
margin_bottom = 403.0
text = "Resume"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="Menus/MenuContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
starting_timeline = "DefaultTimeline"

[node name="BackgroundColor" type="ColorRect" parent="Menus/MenuContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.223529, 0.309804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTexture" type="TextureRect" parent="Menus/MenuContainer/MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menus/MenuContainer/MainMenu"]
margin_left = 172.121
margin_top = 137.397
margin_right = 428.121
margin_bottom = 434.397
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_right = 256.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 12 )
text = "Game of tests"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_top = 72.0
margin_right = 256.0
margin_bottom = 109.0
size_flags_vertical = 3
text = "New Game"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_top = 119.0
margin_right = 256.0
margin_bottom = 156.0
size_flags_vertical = 3
text = "Load Game"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_top = 166.0
margin_right = 256.0
margin_bottom = 203.0
size_flags_vertical = 3
text = "Settings"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_top = 213.0
margin_right = 256.0
margin_bottom = 250.0
size_flags_vertical = 3
text = "About"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_Button" type="Button" parent="Menus/MenuContainer/MainMenu/Buttons"]
margin_top = 260.0
margin_right = 256.0
margin_bottom = 297.0
size_flags_vertical = 3
text = "Quit"
flat = true
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuAnimations" type="AnimationPlayer" parent="Menus/MenuContainer"]
anims/Fade = SubResource( 14 )
anims/reset = SubResource( 15 )

[node name="LooseProgressWarning" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningPanel" type="Panel" parent="Menus/MenuContainer/LooseProgressWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -111.0
margin_right = 204.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -15.0
margin_bottom = -15.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
modulate = Color( 0.537255, 0.329412, 0, 1 )
margin_top = 17.0
margin_right = 378.0
margin_bottom = 54.0
text = "Warning!"
align = 1

[node name="Label2" type="Label" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
modulate = Color( 0.6, 0.470588, 0.247059, 1 )
margin_top = 58.0
margin_right = 378.0
margin_bottom = 135.0
text = "You will loose your unsaved progress!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer"]
margin_top = 139.0
margin_right = 378.0
margin_bottom = 176.0
custom_constants/separation = 40
alignment = 1

[node name="Ok" type="Button" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer"]
margin_left = 47.0
margin_right = 179.0
margin_bottom = 37.0
text = "I feel safe."
flat = true

[node name="Back" type="Button" parent="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer"]
margin_left = 219.0
margin_right = 331.0
margin_bottom = 37.0
text = "Oh wait!"
flat = true

[node name="LooseSaveWarning" type="Control" parent="Menus/MenuContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningPanel" type="Panel" parent="Menus/MenuContainer/LooseSaveWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -111.0
margin_right = 204.0
margin_bottom = 112.0
custom_styles/panel = SubResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 14.0
margin_right = -15.0
margin_bottom = -15.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
modulate = Color( 0.537255, 0.329412, 0, 1 )
margin_top = 17.0
margin_right = 378.0
margin_bottom = 54.0
text = "Warning!"
align = 1

[node name="Label2" type="Label" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
modulate = Color( 0.6, 0.470588, 0.247059, 1 )
margin_top = 58.0
margin_right = 378.0
margin_bottom = 135.0
text = "Deleting saves cannot be undone!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer"]
margin_top = 139.0
margin_right = 378.0
margin_bottom = 176.0
custom_constants/separation = 40
alignment = 1

[node name="Ok" type="Button" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 149.0
margin_bottom = 37.0
text = "Do it!"
flat = true

[node name="Back" type="Button" parent="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_right = 301.0
margin_bottom = 37.0
text = "Oh wait!"
flat = true

[node name="MenuMusic" type="AudioStreamPlayer" parent="Menus/MenuContainer"]
stream = ExtResource( 4 )
volume_db = -0.25
autoplay = true

[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Save_Button" to="Menus/MenuContainer" method="_on_Ingame_Save_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Load_Button" to="Menus/MenuContainer" method="_on_Ingame_Load_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/InGameMenu/Settings_Button" to="Menus/MenuContainer" method="_on_Ingame_Settings_Button_pressed"]
[connection signal="item_selected" from="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/Display/DisplaySelect" to="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu" method="_on_DisplaySelect_item_selected"]
[connection signal="value_changed" from="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu/HBox/VBox/OverallVolume/Slider" to="Menus/MenuContainer/SubMenus/MenuContent/SettingsMenu" method="_on_Slider_value_changed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/MainMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_MainMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/SaveMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_SaveMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/LoadMenu_Button" to="Menus/MenuContainer/SubMenus" method="_on_LoadMenu_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/Settings_Button" to="Menus/MenuContainer/SubMenus" method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/About_Button" to="Menus/MenuContainer/SubMenus" method="_on_About_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/Quit_Button" to="Menus/MenuContainer/SubMenus" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/SubMenus/Buttons/ResumeGame_Button" to="Menus/MenuContainer/SubMenus" method="_on_ResumeGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/NewGame_Button" to="Menus/MenuContainer/MainMenu" method="_on_NewGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/LoadGame_Button" to="Menus/MenuContainer/MainMenu" method="_on_LoadGame_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/Settings_Button" to="Menus/MenuContainer/MainMenu" method="_on_Settings_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/About_Button" to="Menus/MenuContainer/MainMenu" method="_on_About_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/MainMenu/Buttons/Quit_Button" to="Menus/MenuContainer/MainMenu" method="_on_Quit_Button_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer/Ok" to="Menus/MenuContainer/LooseProgressWarning" method="_on_Ok_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseProgressWarning/WarningPanel/VBoxContainer/HBoxContainer/Back" to="Menus/MenuContainer/LooseProgressWarning" method="_on_Back_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer/Ok" to="Menus/MenuContainer/LooseSaveWarning" method="_on_Ok_pressed"]
[connection signal="pressed" from="Menus/MenuContainer/LooseSaveWarning/WarningPanel/VBoxContainer/HBoxContainer/Back" to="Menus/MenuContainer/LooseSaveWarning" method="_on_Back_pressed"]
